# nexign_task2

./: CMakeLists.txt  elevator.cpp  elevator.h  main.cpp
